remove image appointment for mobile version, change form

--- a/main.css
+++ b/main.css
@@ -195,4 +195,12 @@
     display: none!important;
   }
 
+  .appointment  {
+    display: none!important;
+  }
+
+  .padding {
+    padding-top: 5px;
+  }
+
 }
