add margin to carousel

--- a/main.css
+++ b/main.css
@@ -142,6 +142,15 @@
   width: 18rem;
 }
 
+
+/* CAROUSEL */
+
+.center {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+
 /* IMAGE CARD TEAM */
 
 
