--- a/main.css
+++ b/main.css
@@ -100,11 +100,6 @@
   width: 50%;
 }
 
-.image {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
 
 .overlay {
   position: absolute;
@@ -132,7 +127,7 @@
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: center!important;
 }
 
 
